# planner-ai

./: LICENSE  README.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: add_spots.py  database.py  routers.py  test_connection.py
backend/app/core/: config.py
backend/app/schemas/: destination.py
backend/app/services/: __init_.py  travel_plan.py
backend/app/spots/: tourist_spots_with_info.json
backend/backend/: README.md  docker-compose.yml  requirements.txt
backend/backend/app/: main.py
backend/backend/app/db/: base_class.py
backend/backend/app/models/: destination.py  transportation.py
backend/backend/migration/: env.py
backend/backend/optimization/: calc_transportation_parallel.py  get_tourist_spots.py
backend/backend/optimization/data/: tourist_spots_updated.json
backend/backend/optimization/data/hotels/: hiroshima.json  yokohama.json
backend/optimization/: .env.example  .env.local  README.md  calc_transportation.py  calc_transportation_parallel.py  calc_transportation_parallel_from_Osaka.py  ex  example_output  get_hotels_spots.py  get_optimal_travel.py  get_tourist_spots.py  readme.md  travel_planner_for_backend  travel_planner_for_backend.py  update_tourist_spots.py
backend/optimization/data/: Osaka_to_all_spots.json  cities.json  combined_with_info.json  hotels_with_info.json  hotels_with_info2.json  tourist_spots_with_info2.json
backend/optimization/data/hotels/: sendai.json  tokyo.json
frontend/: .gitignore  destination.html  index.html  optimize.html  package.json  readme.md  result.html  server.js  (+1 more)
(+56 files in other folders)
